Task 014 In review Change the complete style of our page

--- a/src/main/less/header.less
+++ b/src/main/less/header.less
@@ -1,6 +1,6 @@
 .navbar {
-  border-top: 4px solid #6db33f;
-  background-color: lightgreen;
+  border-top: 4px solid #65350f;
+  background-color: #65350f;
   margin-bottom: 0px;
   border-bottom: 0;
   border-left: 0;
@@ -8,10 +8,11 @@
 }
 
 .navbar a.navbar-brand {
-  background: url("../images/spring-logo-dataflow.png") -1px -1px no-repeat;
-  margin: 12px 0 6px;
-  width: 229px;
-  height: 46px;
+  background: url("../images/logoo.png") -1px -1px no-repeat;
+  margin-top: 15px;
+  margin: 6px 10 6px;
+  width: 120px;
+  height: 50px;
   display: inline-block;
   text-decoration: none;
   padding: 0;
@@ -19,9 +20,9 @@
 
 .navbar a.navbar-brand span {
   display: block;
-  width: 229px;
-  height: 46px;
-  background: url("../images/spring-logo-dataflow.png") -1px -48px no-repeat;
+  width: 120px;
+  height: 50px;
+  background: url("../images/logoo.png") -1px -48px no-repeat;
   opacity: 0;
   -moz-transition: opacity 0.12s ease-in-out;
   -webkit-transition: opacity 0.12s ease-in-out;
@@ -56,7 +57,7 @@
 }
 .navbar li:hover > a {
   color: #eeeeee;
-  background-color: #6db33f;
+  background-color: #65350f;
 }
 
 .navbar-toggle {
