Request de cambiar el color del menú hecho

--- a/src/main/less/header.less
+++ b/src/main/less/header.less
@@ -1,6 +1,6 @@
 .navbar {
   border-top: 4px solid #65350f;
-  background-color: #65350f;
+  background-color: #FF00FF;
   margin-bottom: 0px;
   border-bottom: 0;
   border-left: 0;
