--- a/src/main/less/petclinic.less
+++ b/src/main/less/petclinic.less
@@ -22,7 +22,7 @@
 @spring-background: #e8cb9a;
 @spring-menu-active: 	#a06c3f;
 @spring-menu-selection: 	#b88b5c;
-@spring-menu: #65350f;
+@spring-menu: #FF00FF;
 
 @body-bg:                           @spring-background;
 @text-color:                        @spring-brown;
