--- a/src/main/less/petclinic.less
+++ b/src/main/less/petclinic.less
@@ -39,7 +39,7 @@
 
 @border-radius-base:             0;
 @border-radius-large:            0;
-@border-radius-small:            0;
+@border-radius-small:            30;
 
 @btn-default-color:              @spring-light-grey;
 @btn-default-bg:                 @spring-menu;
@@ -52,7 +52,7 @@
 
 @pagination-active-bg:                    @spring-brown;
 @pagination-active-border:                @spring-green;
-@table-border-color:                      @spring-brown;
+@table-border-color:                      @spring-black;
 
 .table > thead > tr > th {
   background-color: lighten(@spring-menu, 3%);
