Minor bug fixed

--- a/src/main/less/petclinic.less
+++ b/src/main/less/petclinic.less
@@ -52,7 +52,7 @@
 
 @pagination-active-bg:                    @spring-brown;
 @pagination-active-border:                @spring-green;
-@table-border-color:                      @spring-black;
+@table-border-color:                      @spring-brown;
 
 .table > thead > tr > th {
   background-color: lighten(@spring-menu, 3%);
